# geodense

./: .gitignore  .mdformat.toml  .pre-commit-config.yaml  .yamlfmt  DEV.md  README.md  badge.json  class_index.html  coverage.json  d_2556654284aef078___init___py.html  d_2556654284aef078_lib_py.html  d_2556654284aef078_main_py.html  function_index.html  index.html  mypy.ini  prek.toml  pyproject.toml  status.json  z_2556654284aef078___init___py.html  z_2556654284aef078_geojson_py.html  z_2556654284aef078_lib_py.html  z_2556654284aef078_main_py.html  z_2556654284aef078_models_py.html  z_2556654284aef078_types_py.html
.githooks/: pre-commit
.github/: dependabot.yaml
.github/workflows/: code-coverage.yaml  codeql.yaml  coverage.yaml  linting-tests.yaml  on-push.yaml  python-publish.yaml  python-publish.yml
src/geodense/: __init__.py  _version.py  geojson.py  lib.py  main.py  models.py  types.py
src/lange_lijnstukken_advies/: main.py
src/nsgi_dense/: lib.py  main.py
tests/: conftest.py  fixtures.py  test_check_density.py  test_cli.py  test_densify.py  test_dimensionality.py  test_get_hr_report.py  test_get_layer_name.py  test_interpolate.py  test_pyproj_env.py  test_util.py
tests/data/: empty.gpkg  fc-geometry-collection.json  feature-geometry-collection.json  gemeenten-40.json  linestring_3d_feature.json  linestrings-4258.json  linestrings-out.json  linestrings.gpkg  linestrings.json  linestrings_3d.gpkg  multipolygon.json  polygons.json
