[project]
name = "geodense"
description = "Check density of, and densify geospatial geometries using the geodesic great-circle calculation for accurate CRS transformations"
keywords = []
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
]
readme = { file = "./README.md", content-type = "text/markdown" }
dependencies = [
    "rich-argparse == 1.3.0",
    "Fiona == 1.9.4.post1",
    "shapely == 2.0.1",
    "pyproj == 3.6.0",
]
requires-python = ">=3.9"
dynamic = ["version"]

[project.urls]
repository = "https://github.com/GeodetischeInfrastructuur/geodense"

[project.optional-dependencies]
dev = ["ruff", "black", "mypy", "pytest", "cli-test-helpers", "coverage"]

[build-system]
requires = ["setuptools>=61.0", "setuptools-git-versioning<2"]
build-backend = "setuptools.build_meta"

[project.scripts]
geodense = "geodense.main:main"
gden = "geodense.main:main"

[tool.setuptools-git-versioning]
enabled = true

[tool.setuptools.packages.find]
where = ["src"] # list of folders that contain the packages (["."] by default)
include = [
    "geodense*",
] # package names should match these glob patterns (["*"] by default)
namespaces = false # to disable scanning PEP 420 namespaces (true by default)

[tool.ruff]
# see https://beta.ruff.rs/docs/rules/
# TODO:
# - add pydocstyle (D)
# - add flake8-annotations (ANN)
select = [
    "E",
    "F",
    "B",
    "ISC",
    "PL",
    "RUF",
    "PT",
    "N",
    "I",
    "C90",
    "W",
    "UP",
    "S",
    "ARG",
    "SIM",
    "Q"
]
# Avoid enforcing line-length violations (`E501`) - fixed by Black
ignore = ["E501"]

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = [
    "E",
    "F",
    "B",
    "ISC",
    "PL",
    "RUF",
    "PT",
    "N",
    "I",
    "C90",
    "W",
    "UP",
    "S",
    "ARG",
    "SIM",
    "Q"
]
unfixable = []

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

line-length = 120

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

target-version = "py39"

# disable rules for tests
[tool.ruff.per-file-ignores]
"tests/**/*.py" = [
    "S101", # asserts allowed
]

[tool.ruff.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10
