[project]
name = "geodense"
description = "Check density of, and densify geospatial geometries using the geodesic great-circle calculation for accurate CRS transformations"
keywords = []
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
]
readme = { file = "./README.md", content-type = "text/markdown" }
dependencies = [
    "rich-argparse == 1.3.0",
    "shapely == 2.0.1",
    "pyproj == 3.6.0",
    "geojson-pydantic == 1.0.1"
]
requires-python = ">=3.11"
dynamic = ["version"]

[project.urls]
repository = "https://github.com/GeodetischeInfrastructuur/geodense"

[project.optional-dependencies]
dev = [
    "black == 23.9.1",
    "cli-test-helpers == 3.4.0",
    "coverage == 7.3.1",
    "mypy == 1.5.1",
    "pytest == 7.4.2",
    "pytest-env == 1.0.1",
    "ruff == 0.0.291"
]


[build-system]
requires = ["setuptools>=61.0", "setuptools-git-versioning<2"]
build-backend = "setuptools.build_meta"

[project.scripts]
geodense = "geodense.main:main"
gden = "geodense.main:main"

[tool.setuptools-git-versioning]
enabled = true

[tool.setuptools.packages.find]
where = ["src"] # list of folders that contain the packages (["."] by default)
include = [
    "geodense*",
] # package names should match these glob patterns (["*"] by default)
namespaces = false # to disable scanning PEP 420 namespaces (true by default)

[tool.ruff]
# see https://beta.ruff.rs/docs/rules/
# TODO:
# - add pydocstyle (D)
select = [
    "E",
    "F",
    "B",
    "ISC",
    "PL",
    "RUF",
    "PT",
    "N",
    "I",
    "C90",
    "W",
    "UP",
    "S",
    "ARG",
    "SIM",
    "Q",
    "ANN"
]
# Avoid enforcing line-length violations (`E501`) - fixed by Black
ignore = ["E501"]

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = [
    "E",
    "F",
    "B",
    "ISC",
    "PL",
    "RUF",
    "PT",
    "N",
    "I",
    "C90",
    "W",
    "UP",
    "S",
    "ARG",
    "SIM",
    "Q"
]
unfixable = []

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

line-length = 120

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

target-version = "py39"

# disable rules for tests
[tool.ruff.per-file-ignores]
"tests/**/*.py" = [
    "S101", # asserts allowed
    "ANN" # no type annotation required
]
"util.py" = [
    "S101", # asserts allowed
    "ANN" # no type annotation required
]

[tool.ruff.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10
